[gd_scene load_steps=5 format=2]

[ext_resource path="res://media/image/rect.png" type="Texture" id=1]
[ext_resource path="res://src/actor/Portal.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 30.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 49, 49 )

[node name="Portal" type="Node2D" groups=[
"portal",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.333, 0.333 )
texture = ExtResource( 1 )

[node name="PortalArea" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="PortalArea"]
shape = SubResource( 1 )

[node name="CheckArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckArea"]
shape = SubResource( 2 )

[connection signal="body_entered" from="PortalArea" to="." method="_on_PortalArea_body_entered"]
[connection signal="body_exited" from="PortalArea" to="." method="_on_PortalArea_body_exited"]
